static/css/main.css
/* ... */
    footer .peace-no-war {
        display: inline-block;
        margin-top: 5px;
        cursor: help;
        user-select: none;
    }

        footer .peace-no-war span {
            padding: 5px;
        }

        footer .peace-no-war .peace {
            background-color: #0057B7;
            color: white;
        }

        footer .peace-no-war .no-war {
            background-color: #FFD700;
            color: black;
        }

    footer .peace-no-war:hover .peace {
        background-color: #FFD700;
        color: black;
    }
    footer .peace-no-war:hover .no-war {
        background-color: #0057B7;
        color: white;
    }


/*
 * posts.html / posts_item.html
 */
.posts {
    overflow: hidden;
}
    .posts h2 {
        font-weight: 300;
        text-align: center;
        color: var(--color-base1);
    }

    .posts ol {
        padding-left: 2.6em;
    }

        .posts li {
        }

            .posts li div {
                display: flex;
                flex-direction: row;
                justify-content: space-between;
                align-items: baseline;
            }

                .posts a {
                    white-space: nowrap;
                    font-size: 1.2em;
                    text-overflow: ellipsis;
                    overflow: hidden;
                    padding-right: 1em;
                }

                    .posts a::before {
                        content: "# ";
                        font-weight: 300;
                    }

                    .posts a::after {
                        content: none;
                    }

                .posts time {
                    background-color: var(--color-base03);
                    transition: color .2s;
                }

                .posts li:hover time {
                    color: var(--color-base00);
                }


/*
 * post.html
 */
article {}

    article h2 {
        text-align: center;
        font-weight: 300;
    }

    article .post a {
        border-bottom: 1px dotted var(--color-base01);
    }

        article .post a::before,
        article .post a::after {
            content: none;
        }

        article .post a.img {
            display: block;
            text-align: center;
            text-decoration: none;
            border-bottom: none;
        }

        article .post a.img::before {
            content: none;
        }

        article .post a.img::after {
            content: none;
        }

        article .post a.img img {
            max-width: 100%;
            border-width: 2px;
            border-style: solid;
            border-color: transparent;
            transition: all .2s;
            filter: grayscale(100%);
        }

        article .post .row {
            display: flex;
            flex-wrap: wrap;
            padding: 0 2px;
        }

            article .post .row .column {
                flex: 50%;
                max-width: 50%;
                padding: 0 2px;
            }

                article .post .row .column p {
                    margin: 0;
                }

                article .post .row .column img {
                    margin-top: 4px;
                    vertical-align: middle;
                    width: 100%;
                }

        article .post a.img:hover img {
            border-color: var(--color-blue);
            filter: grayscale(0%);
        }

        article .post table {
            border-collapse: collapse;
        }

            article .post table th,
            article .post table td {
                padding: .3em;
                border-left: 1px dashed var(--color-base01);
                border-right: 1px dashed var(--color-base01);
            }

            article .post table td {
                border-top: 1px dashed var(--color-base01);
            }

            article .post table th:first-child,
            article .post table td:first-child {
                border-left: none;
            }

            article .post table th:last-child,
            article .post table td:last-child {
                border-right: none;
            }

    article .date,
    article .tags {
        text-align: center;
    }

    pre {
        overflow: auto;
        line-height: 1.1;
        background-color: var(--color-base02);
        padding: .25em;
        border: 1px dashed var(--color-base01);
        /*border-radius: 3px;*/
    }

    code {
        font-family: Hack, monospace;
        /*font-size: 16px;*/
        background-color: var(--color-base02);
        padding: .25em;
        border: 1px dashed var(--color-base01);
        /*border-radius: 3px;*/
        white-space: nowrap;
    }

        pre code {
            border: none;
            padding: 0;
            white-space: unset;
        }

          pre code a {
              border-bottom: none !important;
          }


/*
 * tags.html / tag_item.html (same as .posts)
 */


/*
 * media queries
 */
@media print {
    body {
        max-width: none
    }
}

@media only screen and (max-width: 768px) {
    header a {
        display: block;
    }

    header .s1 {
        display: none;
    }

    header .s2 {
        display: block;
    }

    .posts li {
        font-size: 1rem;
    }

    article .post .row .column {
        flex: 100%;
        max-width: 100%;
    }

    article .post a.img img {
        filter: unset;
    }

    code {
        white-space: break-spaces;
        line-height: 3rem;
    }
}

